<?xml version="1.0"?>
<package format="2">
  <name>cybergloveplus</name>
  <version>0.0.1</version>
  <description>cybergloveplus</description>

  <maintainer email="hendrich@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>

  <license>BSD</license>

  <author email="ciobanu@informatik.uni-hamburg.de">Vlad Ciobanu</author>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <export>
  </export>

</package>
