<?xml version="1.0"?>
<package>

  <name>cybergloveplusui</name>
  <version>0.0.1</version>
  <description>a</description>

  <maintainer email="hendrich@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>

  <license>-</license>

  <author email="ciobanu@informatik.uni-hamburg.de">Vlad Ciobanu</author>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>cybergloveplus</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>cybergloveplus</run_depend>

  <export>
  </export>

</package>
